src/objects/FSLVisSet__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Signup user,ModelId, Detection threshold, Einstein User Id</description>
    <fields>
        <fullName>EinsteinUserId__c</fullName>
        <description>The user which will be used to post the prediction response.</description>
        <inlineHelpText>User Id</inlineHelpText>
        <label>EinsteinUserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelId__c</fullName>
        <defaultValue>&quot;GeneralImageClassifier&quot;</defaultValue>
        <description>Model ID used for the classification</description>
        <label>ModelId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignUp__c</fullName>
        <description>user name in email format which was used to sign up for the Vision service</description>
        <inlineHelpText>email format</inlineHelpText>
        <label>SignUp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <defaultValue>0.50</defaultValue>
        <description>0-0.999999 - Detection threshold. Classifications below this threshold will return unable to predict.</description>
        <inlineHelpText>0-0.999999</inlineHelpText>
        <label>Threshold</label>
        <precision>7</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>FSLVisionSetting</label>
</CustomObject>